                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2019-02-04
 * Modified S3Image to allow for images not attached to other objects by passing '-none-' into image_relationship_name.

2019-01-28
 * Fix a long standing bug with false logging of email errors.

2018-11-26
 * Fix trends delta roll up calculation.
 * Add --target option to wing trends command line.

2018-11-25
 * Added Wing::Instrument to make it easier to profile Wing.

2018-10-18
 * Trends deltas now take an average over time rather than having last write be the value for daily, monthly, yearly. This means delta trends won't have perfect accuracy for a while.
 * Trends don't log if value eq undef

2018-09-30
 * Bunch of chat bug fixes.
 * Added /badge and /badge-color commands to chat.
 * Added windowing controls to chat wrapper.
 * Admins automatically handle secondary auth when they "become" a user now.

2018-09-29
 * Add S3File role, for uploading files vs images into a private bucket.

2018-09-25
 * Converted UI to use Vue 2 and Bootstrap 4.
 * Read angular2vue.txt for migration details.
 * Now requires: Template::Plugin::JSON::Escape
 * If you wish to take advantage of the new Firebase features in the UI you'll need to load:

 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>

 * Now requires Crypt::JWT and Firebase Perl modules.
 * Added public/wing.chatwrapper.js. If you want to use it, you need to expose it in etc/nginx.conf.
 * If you want to use Firebase, copy the rules from var/firebase_rules.json into your Firebase instance.