@@ -104,11 +104,10 @@ sub initialize {
     my $self = Wing->db->resultset($class)->new({});
     $self->id(Data::GUID->new->as_string); # want the id and haven't inserted yet
     $self->image_relationship_id($related_id) if $self->has_image_relationship;
-    $self->resize_image($path) unless $noresize;
-    $self->handle_upload($filename, $path);
+    $self->handle_upload($filename, $path, $noresize);
 }
 
-sub handle_upload {
+sub verify_image {
     my ($self, $filename, $path) = @_;
     $self->filename($self->fix_filename($filename));
     my $info = Image::ExifTool::ImageInfo($path, [], { Exclude => ['FileName','Directory','FilePermissions']});
@@ -121,6 +120,12 @@ sub handle_upload {
     unless ($meta->{FileType} ~~ ['JPEG','PNG']) {
         ouch 442, 'File must be a .jpg or .png.';
     }
+}
+
+sub handle_upload {
+    my ($self, $filename, $path, $noresize) = @_;
+    $self->resize_image($path, $filename) unless $noresize;
+    $self->verify_image($filename, $path);
     my $thumbnail = $self->generate_thumbnail($path);
     $self->upload_file_to_s3($path, $self->filename);
     $self->upload_file_to_s3($thumbnail, 'thumbnail'.$self->extension);
@@ -145,7 +150,7 @@ sub generate_thumbnail {
 }
 
 sub resize_image {
-    my ($self, $path) = @_;
+    my ($self, $path, $filename) = @_;
     my $image = Imager->new(file => $path) or ouch(500, Imager->errstr);
     if ($image->getwidth > $self->max_image_size) {
         $image = $image->scale(xpixels => $self->max_image_size) or ouch(500, $image->errstr);
